--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#FFFFFF"
     android:gravity="center_horizontal"
-    android:padding="16dp"
-    android:background="#F9F9F9">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <!-- Logo Image -->
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="333dp"
-        android:layout_height="365dp"
+        android:layout_width="414dp"
+        android:layout_height="397dp"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
         android:src="@drawable/logo" />
@@ -27,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="-26dp"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:text="WELCOME TO
@@ -44,10 +43,10 @@
         android:layout_marginTop="44dp"
         android:background="@drawable/rounded_button"
         android:padding="16dp"
-        android:textSize="29sp"
         android:text="Login"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        android:textSize="29sp" />
 
     <!-- Sign Up Button -->
     <Button
@@ -58,9 +57,9 @@
         android:layout_marginTop="52dp"
         android:background="@drawable/rounded_button"
         android:padding="16dp"
-        android:textSize="29sp"
         android:text="Sign up"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        android:textSize="29sp" />
 
 </LinearLayout>
