--- a/app/src/main/res/layout/bankcreate_page.xml
+++ b/app/src/main/res/layout/bankcreate_page.xml
@@ -19,7 +19,6 @@
         <Button
             android:id="@+id/btnHome"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="-13dp"
             android:layout_height="wrap_content"
             android:text="HOME"
             android:textColor="#4CAF50"
@@ -28,54 +27,53 @@
             android:background="@android:color/transparent"/>
     </LinearLayout>
 
-    <!-- Budget Header and Icon -->
+    <!-- Bank Header and Icon -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="24dp">
+        android:layout_marginBottom="16dp">
 
-
-        <!-- Budget Header -->
+        <!-- Bank Header -->
         <TextView
-            android:id="@+id/lblBudgetHeader"
-            android:layout_width="192dp"
-            android:layout_height="54dp"
-            android:layout_marginLeft="6dp"
+            android:id="@+id/lblBankHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="BUDGET"
+            android:text="BANK"
+            android:layout_marginTop="20dp"
             android:textColor="#000000"
-            android:textSize="44sp"
+            android:textSize="36sp"
             android:textStyle="bold" />
 
-        <!-- Budget Icon -->
+        <!-- Bank Icon -->
         <ImageView
             android:layout_width="80dp"
-            android:layout_marginLeft="60dp"
             android:layout_height="80dp"
-            android:src="@drawable/budget" />
+            android:layout_marginStart="16dp"
+            android:src="@drawable/bank" />
     </LinearLayout>
 
     <!-- Divider Line -->
     <View
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="2dp"
         android:background="#000000"
         android:layout_marginBottom="24dp" />
 
-    <!-- Create a Budget Text -->
+    <!-- Create an Account Header -->
     <TextView
-        android:id="@+id/lblCreateBudget"
+        android:id="@+id/lblCreateAccountHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="CREATE A BUDGET"
+        android:text="CREATE AN ACCOUNT"
         android:textColor="#4CAF50"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginBottom="24dp"
-        android:layout_gravity="center_horizontal"/>
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp" />
 
     <!-- Name Input -->
     <LinearLayout
@@ -94,14 +92,14 @@
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/txtBudgetName"
+            android:id="@+id/txtBankName"
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:background="@drawable/edit_text_background"
             android:hint="  Enter Name" />
     </LinearLayout>
 
-    <!-- Allocated Input -->
+    <!-- Type Input -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -111,21 +109,21 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ALLOCATED"
+            android:text="TYPE"
             android:textColor="#4CAF50"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/txtBudgetAmount"
+            android:id="@+id/txtBankType"
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:background="@drawable/edit_text_background"
-            android:hint="  Enter Allocated Amount" />
+            android:hint="  Enter Type" />
     </LinearLayout>
 
-    <!-- Purpose Input -->
+    <!-- Starting Deposit Input -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -135,49 +133,46 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PURPOSE"
+            android:text="STARTING DEPOSIT"
             android:textColor="#4CAF50"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/txtBudgetPurpose"
+            android:id="@+id/txtBankDeposit"
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:background="@drawable/edit_text_background"
-            android:hint="  Enter Purpose" />
+            android:hint="  Enter Deposit" />
     </LinearLayout>
 
     <!-- Divider Line -->
     <View
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="2dp"
         android:background="#000000"
         android:layout_marginBottom="24dp" />
 
     <!-- Create Button -->
 
     <!-- Footer Links -->
+
     <Button
-        android:id="@+id/btnBudgetCreate"
+        android:id="@+id/btnBankCreate"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/rounded_button_background"
-        android:gravity="center"
         android:text="CREATE"
         android:textAllCaps="false"
         android:textColor="#000000"
-        android:textSize="20sp"
         android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="bottom"
-        android:layout_marginTop="32dp"
-        android:gravity="space_between">
+        android:layout_marginTop="32dp">
 
         <TextView
             android:id="@+id/lblHelp"
@@ -185,9 +180,8 @@
             android:layout_height="wrap_content"
             android:text="HELP"
             android:textColor="#4CAF50"
-            android:textSize="17sp"
-            android:onClick="onHelpClick"
-            android:layout_marginRight="200dp" />
+            android:layout_marginRight="220dp"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/lblContactUs"
@@ -195,9 +189,7 @@
             android:layout_height="wrap_content"
             android:text="CONTACT US"
             android:textColor="#4CAF50"
-            android:textSize="17sp"
-            android:onClick="onContactClick"
-            android:layout_marginEnd="20dp" />
+            android:textSize="14sp" />
     </LinearLayout>
 
 </LinearLayout>
