--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="414dp"
         android:layout_height="397dp"
         android:layout_gravity="center"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="-60dp"
         android:src="@drawable/logo" />
 
     <!-- Welcome Text -->
@@ -36,7 +36,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnMainLogin"
         android:layout_width="292dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -50,7 +50,7 @@
 
     <!-- Sign Up Button -->
     <Button
-        android:id="@+id/btnSignUp"
+        android:id="@+id/btnMainSignUp"
         android:layout_width="285dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
