--- a/app/src/main/res/layout/budgetdelete_page.xml
+++ b/app/src/main/res/layout/budgetdelete_page.xml
@@ -110,7 +110,7 @@
 
     <!-- Footer Links -->
     <Button
-        android:id="@+id/btnDelete"
+        android:id="@+id/btnDeleteBudget"
         android:layout_width="291dp"
         android:layout_height="60dp"
         android:layout_marginBottom="24dp"
