--- a/app/src/main/res/layout/budgetedit_page.xml
+++ b/app/src/main/res/layout/budgetedit_page.xml
@@ -186,19 +186,20 @@
         android:layout_marginBottom="14dp" />
 
     <!-- Edit Button -->
+
+    <!-- Footer Links -->
     <Button
-        android:id="@+id/btnEdit"
+        android:id="@+id/btnEditBudget"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginBottom="-21dp"
         android:background="@drawable/rounded_button_background"
         android:gravity="center"
         android:text="EDIT"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:layout_marginBottom="-21dp"
+        android:textColor="#000000"
         android:textStyle="bold" />
 
-    <!-- Footer Links -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
