--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -60,16 +60,17 @@
         android:layout_marginTop="50dp"/>
 
     <!-- Username Input -->
+
+    <!-- Forgot Username Text -->
     <EditText
         android:id="@+id/txtUsername"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/edit_text_background"
-        android:hint="  Enter Username"
-        android:fontFamily="sans-serif" />
+        android:fontFamily="sans-serif"
+        android:hint="  Enter Username" />
 
-    <!-- Forgot Username Text -->
     <TextView
         android:id="@+id/lblForgotUsername"
         android:layout_width="wrap_content"
@@ -115,6 +116,18 @@
         android:layout_marginTop="8dp"
         android:layout_gravity="end"/>
 
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/rounded_button_background"
+        android:text="LOGIN"
+        android:textAllCaps="false"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
+
     <!-- Or Login With Text -->
     <TextView
         android:id="@+id/lblOrLoginWith"
@@ -124,7 +137,7 @@
         android:textColor="#000000"
         android:textSize="16sp"
         android:fontFamily="sans-serif-condensed"
-        android:layout_marginTop="74dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"/>
 
     <!-- Social Login Buttons -->
