--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -8,7 +8,7 @@
     android:padding="16dp"
     android:background="#FFFFFF">
 
-    <!-- Logo and App Title in Horizontal Alignment -->
+    <!-- Logo and App Title-->
 
     <!-- Welcome Text -->
     <LinearLayout
@@ -109,7 +109,7 @@
             android:gravity="center"
             android:text="BUDGET"
             android:textAllCaps="false"
-            android:textColor="#000000" /> <!-- Text color changed to black -->
+            android:textColor="#000000" />
 
         <!-- Budget Icon -->
         <ImageView
@@ -139,8 +139,7 @@
             android:gravity="center"
             android:text="SAVINGS"
             android:textAllCaps="false"
-            android:textColor="#000000" /> <!-- Text color changed to black -->
-
+            android:textColor="#000000" />
         <!-- Savings Icon -->
         <ImageView
             android:id="@+id/imgSavingsIcon"
@@ -168,7 +167,7 @@
             android:text="SETTINGS"
             android:layout_marginRight="20dp"
             android:textAllCaps="false"
-            android:textColor="#000000" /> <!-- Text color changed to black -->
+            android:textColor="#000000" />
 
         <!-- Settings Icon -->
         <ImageView
