--- a/app/src/main/res/layout/signup_page.xml
+++ b/app/src/main/res/layout/signup_page.xml
@@ -8,7 +8,7 @@
     android:padding="16dp"
     android:background="#FFFFFF">
 
-    <!-- Section with Logo and Sign Up Text Side by Side -->
+    <!-- Header -->
     <LinearLayout
         android:layout_width="530dp"
         android:layout_height="142dp"
@@ -125,7 +125,7 @@
         android:gravity="center"
         android:layout_marginTop="16dp">
 
-        <!-- First Circle Button -->
+        <!-- Circle Buttons -->
         <ImageButton
             android:id="@+id/btnSocial1"
             android:layout_width="50dp"
@@ -133,7 +133,7 @@
             android:background="@drawable/circle_background"
             android:layout_margin="8dp"/>
 
-        <!-- Second Circle Button -->
+
         <ImageButton
             android:id="@+id/btnSocial2"
             android:layout_width="50dp"
@@ -141,7 +141,7 @@
             android:background="@drawable/circle_background"
             android:layout_margin="8dp"/>
 
-        <!-- Third Circle Button -->
+
         <ImageButton
             android:id="@+id/btnSocial3"
             android:layout_width="50dp"
