--- a/app/src/main/res/layout/budgetcreate_page.xml
+++ b/app/src/main/res/layout/budgetcreate_page.xml
@@ -176,8 +176,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="bottom"
-        android:layout_marginTop="32dp"
-        android:gravity="space_between">
+        android:layout_marginTop="32dp">
 
         <TextView
             android:id="@+id/lblHelp"
