Added login and register features and edited the register page

--- a/app/src/main/res/layout/savings_page.xml
+++ b/app/src/main/res/layout/savings_page.xml
@@ -76,7 +76,7 @@
             android:textStyle="bold"
             android:layout_marginBottom="8dp" />
 
-        <Spinner
+        \<Spinner
             android:id="@+id/spnSavings"
             android:layout_width="match_parent"
             android:layout_height="48dp"
