--- a/app/src/main/res/layout/signup_page.xml
+++ b/app/src/main/res/layout/signup_page.xml
@@ -47,6 +47,29 @@
         android:layout_height="3dp"
         android:background="#000000"
         android:layout_marginTop="16dp"/>
+    <!-- Email Label (NEW) -->
+    <TextView
+        android:id="@+id/lblEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EMAIL"
+        android:textColor="#4CAF50"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"/>
+
+    <!-- Email Input (NEW) -->
+    <EditText
+        android:id="@+id/txtEmail"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/edit_text_background"
+        android:hint="  Enter Email"
+        android:inputType="textEmailAddress"
+        android:fontFamily="sans-serif" />
 
     <!-- Username Label -->
     <TextView
@@ -57,15 +80,14 @@
         android:textColor="#4CAF50"
         android:textSize="20sp"
         android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"
-        android:layout_marginTop="50dp"/>
+        android:textStyle="bold"/>
 
     <!-- Username Input -->
     <EditText
         android:id="@+id/txtUsername"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/edit_text_background"
         android:hint="  Enter Username"
@@ -80,16 +102,15 @@
         android:textColor="#4CAF50"
         android:textSize="20sp"
         android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"
-        android:layout_marginTop="24dp"/>
+        android:textStyle="bold"/>
 
     <!-- Password Input -->
     <EditText
         android:id="@+id/txtPassword"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="35dp"
         android:background="@drawable/edit_text_background"
         android:hint="  Enter Password"
         android:fontFamily="sans-serif" />
@@ -99,7 +120,6 @@
         android:id="@+id/btnSignUp"
         android:layout_width="266dp"
         android:layout_height="60dp"
-        android:layout_marginTop="24dp"
         android:background="@drawable/rounded_button_background"
         android:padding="16dp"
         android:textSize="20sp"
@@ -124,42 +144,42 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginTop="26dp"
         android:gravity="center"
-        android:layout_marginTop="26dp">
+        android:orientation="horizontal">
 
         <!-- Apple Login Button -->
         <ImageButton
             android:id="@+id/btnApple"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginRight="30dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/apple"
+            android:onClick="onAppleLoginClick"
             android:scaleType="centerInside"
-            android:onClick="onAppleLoginClick"/>
+            android:src="@drawable/apple" />
 
         <!-- Google Login Button -->
         <ImageButton
             android:id="@+id/btnGoogle"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_margin="8dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/google"
+            android:onClick="onGoogleLoginClick"
             android:scaleType="centerInside"
-            android:onClick="onGoogleLoginClick"/>
+            android:src="@drawable/google" />
 
         <!-- Meta Login Button -->
         <ImageButton
             android:id="@+id/btnMeta"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="30dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/meta"
+            android:onClick="onMetaLoginClick"
             android:scaleType="centerInside"
-            android:onClick="onMetaLoginClick"/>
+            android:src="@drawable/meta" />
 
     </LinearLayout>
 
