--- a/app/src/main/res/layout/bankcreate_page.xml
+++ b/app/src/main/res/layout/bankcreate_page.xml
@@ -62,7 +62,7 @@
         android:background="#000000"
         android:layout_marginBottom="24dp" />
 
-    <!-- Create an Account Header -->
+    <!-- Create an com.example.opsc7312.api.Account Header -->
     <TextView
         android:id="@+id/lblCreateAccountHeader"
         android:layout_width="wrap_content"
