--- a/app/src/main/res/layout/bankedit_page.xml
+++ b/app/src/main/res/layout/bankedit_page.xml
@@ -61,7 +61,7 @@
         android:background="#000000"
         android:layout_marginBottom="24dp" />
 
-    <!-- Edit an Account Header -->
+    <!-- Edit an com.example.opsc7312.api.Account Header -->
     <TextView
         android:id="@+id/lblEditAccountHeader"
         android:layout_width="wrap_content"
@@ -74,7 +74,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp" />
 
-    <!-- Account Dropdown -->
+    <!-- com.example.opsc7312.api.Account Dropdown -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
