--- a/app/src/main/res/layout/budget_page.xml
+++ b/app/src/main/res/layout/budget_page.xml
@@ -28,7 +28,7 @@
             android:background="@android:color/transparent"/>
     </LinearLayout>
 
-    <!-- Budget Header and Icon -->
+    <!-- com.example.opsc7312.api.Budget Header and Icon -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
         android:gravity="center_horizontal"
         android:layout_marginBottom="24dp">
 
-        <!-- Budget Header -->
+        <!-- com.example.opsc7312.api.Budget Header -->
         <TextView
             android:id="@+id/lblBudgetHeader"
             android:layout_width="192dp"
@@ -48,7 +48,7 @@
             android:textSize="44sp"
             android:textStyle="bold" />
 
-        <!-- Budget Icon -->
+        <!-- com.example.opsc7312.api.Budget Icon -->
         <ImageView
             android:layout_width="80dp"
             android:layout_marginLeft="60dp"
@@ -87,7 +87,7 @@
             android:spinnerMode="dropdown" />
     </LinearLayout>
 
-    <!-- Allocated Budget Input -->
+    <!-- Allocated com.example.opsc7312.api.Budget Input -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
