--- a/app/src/main/res/layout/budgetcreate_page.xml
+++ b/app/src/main/res/layout/budgetcreate_page.xml
@@ -27,7 +27,7 @@
             android:background="@android:color/transparent"/>
     </LinearLayout>
 
-    <!-- Budget Header and Icon -->
+    <!-- com.example.opsc7312.api.Budget Header and Icon -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
         android:background="#000000"
         android:layout_marginBottom="24dp" />
 
-    <!-- Create a Budget Category Text -->
+    <!-- Create a com.example.opsc7312.api.Budget Category Text -->
     <TextView
         android:id="@+id/lblCreateBudget"
         android:layout_width="wrap_content"
@@ -121,7 +121,7 @@
             android:hint="  Enter Budgeted Amount" />
     </LinearLayout>
 
-    <!-- Spinner for Account Selection -->
+    <!-- Spinner for com.example.opsc7312.api.Account Selection -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
